--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Game Collection App</string>
     <string name="button_addCollection">Add Game Collection</string>
+    <string name="hint_collectionTitle">Game Collection Title</string>
 
 </resources>
